Zend/zend_execute_API.c
@@ -901,14 +901,11 @@ int zend_call_function(zend_fcall_info *fci, zend_fcall_info_cache *fci_cache TS
 					efree(function_name_lc);
 				}
 			} else if (calling_scope) {
-				char *function_name_lc = zend_str_tolower_dup(fname, fname_len);
-
 				if (calling_scope->get_static_method) {
-					EX(function_state).function = calling_scope->get_static_method(calling_scope, function_name_lc, fname_len TSRMLS_CC);
+					EX(function_state).function = calling_scope->get_static_method(calling_scope, fname, fname_len TSRMLS_CC);
 				} else {
-					EX(function_state).function = zend_std_get_static_method(calling_scope, function_name_lc, fname_len TSRMLS_CC);
+					EX(function_state).function = zend_std_get_static_method(calling_scope, fname, fname_len TSRMLS_CC);
 				}
-				efree(function_name_lc);
 
 				if (check_scope_or_static && EX(function_state).function
 				&& !(EX(function_state).function->common.fn_flags & ZEND_ACC_STATIC)
